# django-rated

./: .gitignore  .travis.yml  README  README.md  changelog.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/: Makefile  changelog.rst  conf.py  decorators.rst  index.rst  middleware.rst  realms.rst  settings.rst
rated/: .middleware.py.swp  decorators.py  middleware.py  settings.py  signals.py  utils.py
rated/tests/: test_decorators.py
tests/: settings.py  test_decorators.py
