[project]
name = "django-rated"
version = "2.0.0"
description = "A rate limiting middleware for Django"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Curtis Maloney", email="curtis@tinbrain.net" }
]
keywords = ["django", "api"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
dependencies = [
  "Django (>=1.9)",
  "redis (>=2.7.2)",
]

[project.urls]
Repository = "https://github.com/funkybob/django-rated"

