[project]
name = "django-rated"
version = "2.0.0"
description = "A rate limiting decorator for Django"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Curtis Maloney", email="curtis@tinbrain.net" }
]
keywords = ["django", "api"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
dependencies = [
  "Django (>=1.9)",
  "redis (>=2.7.2)",
]

[project.urls]
Repository = "https://github.com/funkybob/django-rated"

[project.optional-dependencies]
test = [
  "pylint >= 2.17.4",
  "isort >= 5.12.0",
  "pytest >= 7.3.1",
  "pytest-django >= 4.5.2",
  "factory-boy >= 3.2.1",
  "pytest-cov >= 4.0.0",
  "pylint-pytest >= 1.1.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

django_find_project = false
pythonpath = [".", "src"]

addopts = "--cov=src/"

[tool.coverage.run]
branch = true
source = ["rated"]

[tool.pylint."message control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]
